# Lemon_Lab

./: .gitmodules  CMakeLists.txt  README.md  日志记录.md
src/: main.cpp
src/CoreLayer/ColorSpace/: RGB.h  Spectrum.h
src/CoreLayer/Math/: CMakeLists.txt  Constant.h  Function.h  Geometry.h  Math.h  Transform.cpp  Transform.h
src/FunctionLayer/Acceleration/: AABB.cpp  AABB.h  Acceleration.cpp  Acceleration.h  BVH.cpp  BVH.h  EmbreeBVH.cpp  EmbreeBVH.h
src/FunctionLayer/Camera/: Camera.cpp  Camera.h  Pinhole.cpp  Pinhole.h
src/FunctionLayer/Film/: Film.h
src/FunctionLayer/Integrator/: DirectIntegrator.cpp  DirectIntegrator.h  Integrator.h  NormalIntegrator.cpp  NormalIntegrator.h  PathIntegrator.cpp  PathIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
src/FunctionLayer/Light/: AreaLight.cpp  AreaLight.h  Light.h
src/FunctionLayer/Material/: Conductor.cpp  Conductor.h  Dielectric.cpp  Dielectric.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Mirror.cpp  Mirror.h
src/FunctionLayer/Material/BxDF/: BSDF.h  Lambert.h  RoughConductor.h  RoughDielectric.h  Sampling.h  Specular.h
src/FunctionLayer/Material/NDF/: Beckmann.h  GGX.h  NDF.h
src/FunctionLayer/Ray/: Ray.h
src/FunctionLayer/Sampler/: IndependentSampler.cpp  IndependentSampler.h  Sampler.h
src/FunctionLayer/Scene/: Scene.cpp  Scene.h
src/FunctionLayer/Shape/: Cube.cpp  Cube.h  Intersection.h  Parallelogram.cpp  Parallelogram.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/FunctionLayer/Texture/: CheckerTexture.h  ConstantTexture.h  ImageTexture.cpp  ImageTexture.h  Texture.cpp  Texture.h
src/ResourceLayer/: Image.cpp  Image.h  Mesh.cpp  Mesh.h
